--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <p>Our main objective is to save all of the pandas in the world.
         And to do that we need a couple of things like a place to let them
         live in and secure a good source of food. To do that we hope you donate
-        some cash to help us, got it?. This site is a joke so
+        some cash to help us. This site is a joke so
         don't take anything you read here seriously okay?</p>
       </div>
     </div>
@@ -102,6 +102,71 @@
     </div>
   </div>
 </div>
+
+<!-- Third Section -->
+<hr>
+<div class="container">
+  <div class="row">
+    <div class="col-7">
+      <article class="">
+        <p>
+          Our main objective is to save all of the pandas in the world.
+          And to do that we need a couple of things like a place to let them
+          live in and secure a good source of food. To do that we hope you donate
+          some cash to help us, got it?. This site is a joke so
+          don't take anything you read here seriously okay? Our main objective is to save all of the pandas in the world.
+          And to do that we need a couple of things like a place to let them
+          live in and secure a good source of food. To do that we hope you donate
+          some cash to help us, got it?. This site is a joke so
+          don't take anything you read here seriously okay?
+        </p>
+      </article>
+    </div>
+    <div class="col-5">
+      <div class="Section3Icon">
+        <img src="panda.jpg">
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Last section (footer)-->
+<footer class="ftr">
+  <div class="row">
+    <div class="col-3 miniStack">
+      <h1>Orgnization</h1>
+      <ul>
+        <li>About</li>
+        <li>Blogs</li>
+        <li>Plan</li>
+      </ul>
+    </div>
+    <div class="col-3 miniStack">
+      <h1>Orgnization</h1>
+      <ul>
+        <li>About</li>
+        <li>Blogs</li>
+        <li>Plan</li>
+      </ul>
+    </div>
+    <div class="col-3 miniStack">
+      <h1>Orgnization</h1>
+      <ul>
+        <li>About</li>
+        <li>Blogs</li>
+        <li>Plan</li>
+      </ul>
+    </div>
+    <div class="col-3 miniStack">
+      <h1>Orgnization</h1>
+      <ul>
+        <li>About</li>
+        <li>Blogs</li>
+        <li>Plan</li>
+      </ul>
+    </div>
+  </div>
+</footer>
 
 <!--javascript code-->
 <script type="text/javascript">
