--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <!--First section of the site-->
 <div class="container" id="section1Gradient">
   <div class="row">
-    <div class="col-6">
+    <div class="col-6 firstCol">
       <div class="leftSide-col">
         <h1 class="larger">Panda savers</h1>
         <h1 class="larger2">Signup and join us now to help us keeping all the pandas
@@ -58,7 +58,7 @@
 </header>
 <div class="container">
   <div class="row">
-    <div class="col-4">
+    <div class="col-4 boxContainer">
       <div class="box">
         <div class="icon">
           <img src="img1.png">
@@ -70,7 +70,7 @@
         and make the ultimate panda paradise. So, are you interested?</p>
       </div>
     </div>
-    <div class="col-4">
+    <div class="col-4 boxContainer">
       <div class="box">
         <div class="icon">
           <img src="img1.png">
@@ -82,7 +82,7 @@
         live for another day. So, we hope you people have the same feeling as us.</p>
       </div>
     </div>
-    <div class="col-4">
+    <div class="col-4 boxContainer">
       <div class="box">
         <div class="icon">
           <img src="img1.png">
@@ -108,7 +108,7 @@
 <div class="container">
   <div class="row">
     <div class="col-7">
-      <article class="">
+      <article>
         <p>
           Our main objective is to save all of the pandas in the world.
           And to do that we need a couple of things like a place to let them
